--- a/css/style.css
+++ b/css/style.css
@@ -1,120 +1,95 @@
-    body {
-    background: rgb(2, 29, 16);
-    background: linear-gradient(
-        0deg,
-        rgb(44, 180, 17) 0%,
-        rgb(2, 75, 47) 100%
-    );
-    margin: 0;
-    font-family: 'Aboreto', serif;
-    color: #fff;
-}
-
-/* general typo*/
-h1 {
-    font-family: "Aboreto", sans-serif;
-    font-size: 2;
-    margin: 2em 1rem;
-    text-shadow: 3px 3px 5px rgb(167, 202, 193);
-    margin: 18% auto;
-    color: transparent;
-    background: url('https://cdn.pixabay.com/photo/2022/07/29/04/24/leaves-7351019_960_720.jpg');
-    -webkit-background-clip: text;
-    background-position: 100px 0;
-    animation: image 20s linear infinite;
-
-}
-@keyframes image{
-
-100%{
-
-    background-position: 2000px 0;
-
-}
-}
-
-
-@media only screen and (min-width: 35em) {
-    h1 {
-        font-size: 7em;
-        margin: 2em 4rem 1em;
-    }
-}
-
-h2 {
-    border-bottom: 1px solid rgb(129, 12, 90);
-    font-family: "Oxygen", Sans-Serif;
-    font-size: 3em;
-    color: #fff;
-}
-
-p {
-    line-height: 1.6em;
-    color: #eee;
-}
-
-/* ---- Layouts ---- */
-main {
-    margin: 10vh 1em 10vh;
-}
-
-.main-head {
-    min-height: 40vh;
-    padding-top: 3em;
-}
-
-
-section {
-    position: relative;
-    min-height: 80vh;
-}
-
-/* ---- Module Rules ---- */
-
-/* Nav Styles*/
-.navbar__menu ul {
-    padding-left: 0;
-    margin: 0;
-    text-align: left;
-}
-
-.navbar__menu li {
-    display: inline-block;
-}
-
-.navbar__menu .menu__link {
-    display: block;
-    padding: 1em;
-    font-weight: bold;
-    text-decoration: none;
-    color: rgb(224, 198, 198);
-    border-radius: 15px;
-}
-
-.navbar__menu .menu__link:hover {
-    background: rgb(6, 78, 100);
-    color: #fff;
-    transition: ease 500ms all;
-    border-radius: 6px;
-    text-shadow: 0px 0px 5px rgb(255, 255, 255);
-}
-
-.navbar__menu .menu__link:focus {
-    background: rgb(182, 18, 18);
-    color: #fff;
-    transition: ease 500ms all;
-    border-radius: 30px;
-    text-shadow: 0px 0px 5px rgb(255, 255, 255);
-}
-
-.navbar__menu .menu__link:active {
-    background: rgb(214, 186, 25);
-    color: #fff;
-    transition: ease 500ms all;
-    border-radius: 30px;
-    text-shadow: 0px 0px 5px rgb(255, 255, 255);
-}
- input[type=text] {
+   /*
+    *
+    * CSS written based on SMACSS architecture.
+    * To learn more, visit: http://smacss.com/
+    * 
+    * For simplicity, no reset or normalize is added. 
+    * To learn more, visit: https://css-tricks.com/reboot-resets-reasoning/
+    *
+   */
+   
+   
+   /* ---- Base Rules ---- */
+   body {
+       background: rgb(2, 63, 34);
+       background: linear-gradient(0deg, rgb(111, 204, 159) 0%, rgb(1, 36, 28) 100%);
+       margin: 0;
+       font-family:'Corben', serif;
+       color:#fff;
+   }
+   
+   
+   /* Typeography General*/
+   h1 {
+       font-family: 'Corben', sans-serif;
+       font-size: 3em;
+       margin: 2em 1rem;
+       font-weight:900;
+   }
+   
+   @media only screen and (min-width: 35em){
+       h1 {
+           font-size: 7em;
+           margin: 2em 4rem 1em;
+       }
+   }
+   
+   h2 {
+       border-bottom: 1px solid #cc1;
+       font-family: 'Oxygen', Sans-Serif;
+       font-size: 3em;
+       color: #fff;
+   }
+   
+   p {
+       line-height: 1.6em;
+       color: #eee;
+   }
+   
+   /* ---- Layout Rules ---- */
+   main {
+       margin: 10vh 1em 10vh;
+   }
+   
+   .main-hero {
+       min-height: 40vh;
+       padding-top: 3em;
+   }
+   
+   section {
+       position: relative;
+       min-height: 80vh;
+   }
+   
+   
+   /* ---- Module Rules ---- */
+   
+   /* Navigation Styles*/
+   .navbar__menu ul {
+       padding-left: 0;
+       margin: 0;
+       text-align: left;
+   }
+   
+   .navbar__menu li {
+       display: inline-block;
+   }
+   
+   .navbar__menu .menu__link {
+       display: block;
+       padding: 1em;
+       font-weight: bold;
+       text-decoration: none;
+       color: rgb(240, 223, 223);
+       border-radius: 5px;
+   }
+   
+   .navbar__menu .menu__link:hover {
+       background: rgb(91, 158, 136);
+       color: #fff;
+       transition: ease 0.3s all;
+   }
+   input[type=text] {
   float: right;
   padding: 6px;
   border: none;
@@ -125,140 +100,170 @@ section {
   font-size: 17px;
   position:absolute;
   left:80%;
-  bottom:-17%;
+  top:12px
 }
-/* Header */
-.page__header {
-    background: rgb(221, 179, 115);
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 55;
-}
-
-/* Footer  */
-.page__footer {
-    background: #000;
-    padding: 3em;
-    color: #fff;
-}
-
-.page__footer p {
-    color: #fff;
-}
-
-
-/*  Container Styles */
-.land__container {
-    padding: 1em;
-    text-align: left;
-}
-
-@media only screen and (min-width: 35em) {
-    .land__container {
-        max-width: 50em;
-        padding: 4em;
-    }
-}
-
-section:nth-of-type(even) .land__container {
-    margin-right: 0;
-    margin-left: auto;
-    text-align: right;
-}
-
-/* Circles */
-
-/* Background Circles */
-/* Note that background circles are created with psuedo elements before and after */
-/* Circles appear to be random do to use of :nth-of-type psuedo class */
-section:nth-of-type(odd) .land__container::before {
-    content: '';
-    background: rgba(255, 255, 255, 0.187);
-    position: absolute;
-    z-index: -5;
-    width: 20vh;
-    height: 20vh;
-    border-radius: 50%;
-    opacity: 0;
-    transition: ease 4s all;
-}
-
-section:nth-of-type(even) .land__container::before {
-    content: '';
-    background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
-    position: absolute;
-    top: 3em;
-    right: 3em;
-    z-index: -5;
-    width: 10vh;
-    height: 10vh;
-    border-radius: 50%;
-    opacity: 0;
-    transition: ease 0.5s all;
-}
-
-section:nth-of-type(3n) .land__container::after {
-    content: '';
-    background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    z-index: -5;
-    width: 10vh;
-    height: 10vh;
-    border-radius: 50%;
-    opacity: 0;
-    transition: ease 0.5s all;
-}
-
-section:nth-of-type(3n + 1) .land__container::after {
-    content: '';
-    background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
-    position: absolute;
-    right: 20vw;
-    bottom: -5em;
-    z-index: -5;
-    width: 15vh;
-    height: 15vh;
-    border-radius: 50%;
-    opacity: 0;
-    transition: ease 0.5s all;
-}
-
-
-
-/* Sections */
-
-section.active-class {
-    background: rgb(223, 50, 122);
-    background: linear-gradient(
-        0deg,
-        rgba(71, 34, 34, 0.1) 0%,
-        rgba(211, 6, 6, 0) 100%
-    );
-    text-shadow: 3px 3px 5px black;
-}
-
-section.active-class .land__container::before {
-    opacity: 1;
-    animation: rotate 10s linear 0s infinite forwards;
-}
-
-section.active-class .land__container::after {
-    opacity: 1;
-    animation: rotate 10s linear 0s infinite forwards reverse;
-}
-
-/* Keyframe Animations */
-@keyframes rotate {
-    from {
-        transform: rotate(0deg) translate(-1em) rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg) translate(-1em) rotate(-360deg);
-    }
-}
+   /* Header Styles */
+   .page__header {
+       background: #059c49;
+       position: fixed;
+       top: 0;
+       width: 100%;
+       z-index: 5;
+   }
+   
+   
+   
+   @media (max-width:641px) {
+       .page__header {
+           width: 25%;
+           height: 100vh;
+           transition: ease 0.3s;
+       }
+   
+       .navbar__menu ul {
+           margin-top: 40%;
+           text-align: center;
+       }
+   
+       .navbar__menu li{
+           width: 100%;
+       }
+   
+      
+   
+       .slide-out {
+           transform: translateX(-100%);
+           transition: ease 0.3s;
+       }
+   }
+   
+   /* Footer Styles */
+   .page__footer {
+       background: #000;
+       padding: 3em;
+       color: #fff;
+   }
+   
+   .page__footer p{
+       color: #fff;
+   }
+   
+   
+   /* ---- Theme Rules ---- */
+   /* Landing Container Styles */
+   .landing__container {
+       padding: 1em;
+       text-align: left;
+   }
+   
+   @media only screen and (min-width: 35em){
+       .landing__container {
+           max-width: 50em;
+           padding: 4em;
+       }
+   }
+   
+   section:nth-of-type(even) .landing__container {
+       margin-right: 0;
+       margin-left: auto;
+       text-align: right; 
+   }
+   
+   /* Background Circles */
+   /* Note that background circles are created with psuedo elements before and after */
+   /* Circles appear to be random do to use of :nth-of-type psuedo class */
+   section:nth-of-type(odd) .landing__container::before {
+       content: '';
+       background: rgba(255, 255, 255, 0.187);
+       position: absolute;
+       z-index: -5;
+       width: 20vh;
+       height: 20vh;
+       border-radius: 50%;
+       opacity: 0;
+       transition: ease 0.5s all;
+   }
+   
+   section:nth-of-type(even) .landing__container::before {
+       content: '';
+       background: rgb(255,255,255);
+       background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
+       position: absolute;
+       top: 3em;
+       right: 3em;
+       z-index: -5;
+       width: 10vh;
+       height: 10vh;
+       border-radius: 50%;
+       opacity: 0;
+       transition: ease 0.5s all;
+   }
+   
+   section:nth-of-type(3n) .landing__container::after {
+       content: '';
+       background: rgb(255,255,255);
+       background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
+       position: absolute;
+       right: 0;
+       bottom: 0;
+       z-index: -5;
+       width: 10vh;
+       height: 10vh;
+       border-radius: 50%;
+       opacity: 0;
+       transition: ease 0.5s all;
+   }
+   
+   section:nth-of-type(3n + 1) .landing__container::after {
+       content: '';
+       background: rgb(255,255,255);
+       background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
+       position: absolute;
+       right: 20vw;
+       bottom: -5em;
+       z-index: -5;
+       width: 15vh;
+       height: 15vh;
+       border-radius: 50%;
+       opacity: 0;
+       transition: ease 0.5s all;
+   }
+   
+   
+   /* ---- Theme State Rules ---- */
+   /* Section Active Styles */
+   /* Note: your-active-class class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
+   section.your-active-class {
+       background: rgb(0, 0, 0);
+       background: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
+   }
+   
+   section.your-active-class .landing__container::before {
+       opacity: 1;
+       animation: rotate 4s linear 0s infinite forwards;
+   }
+   
+   section.your-active-class .landing__container::after {
+       opacity: 1;
+       animation: rotate 5s linear 0s infinite forwards reverse;
+   }
+   
+   /* Section Active Styles Keyframe Animations */
+   @keyframes rotate {
+       from {
+           transform: rotate(0deg)
+                      translate(-1em)
+                      rotate(0deg);
+       }
+       to {
+           transform: rotate(360deg)
+                      translate(-1em) 
+                      rotate(-360deg);
+       }
+   }
+   
+   
+   .active-nav {
+       border-bottom: 5px double rgb(153, 4, 4);;
+       transition: ease 0.1s;
+   }
